# capsule

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  install.sh  prompt.md  release.toml  run.sh
.capsule/: Dockerfile  before-each.sh  config.yml  prompt.md
.github/workflows/: release.yml
capsule-macros/: Cargo.toml
capsule-macros/src/: lib.rs
docs/adr/: 0001-isolate-credentials-per-run.md
example/.capsule/: .env  Dockerfile  before-all.sh  before-each.sh  config.yml  prompt.md
example/.ralph/: .env  Dockerfile  setup.sh
src/: config.rs  docker.rs  env.rs  git.rs  hooks.rs  lib.rs  main.rs  mcp_server.rs  note_block.rs  pipeline.rs  preflight.rs  prompt.rs  run.rs  stream_parser.rs  update_check.rs  verdict.rs
templates/: Dockerfile  entrypoint.sh  stream_display.jq  system_preamble.md
tests/: cli.rs  config.rs  docker.rs  env.rs  git_identity.rs  hooks.rs  preflight.rs  prompt.rs
tests/common/: mod.rs
